Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27764

undefined reference to `JSC::JSCell::classInfo() const'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.1
    • 5.0.0
    • Other, Widgets: Main Window
    • None
    • Windows 7 64-bit, mingw-w64 gcc-4.7.2
    • 5e594b14d4b0295ad562211a43fdc996437bac17

    Description

      I get error:

      windres -i QtWebKitWidgetsd_resource.rc -o obj\debug\QtWebKitWidgetsd_resource_res.o --include-dir=. -DUNICODE -DSTATICALLY_LINKED_WITH_WebKit1 -DSQLITE_CORE -DSQLITE_OMIT_LOAD_EXTENSION -DSQLITE_OMIT_COMPLETE -DSTATICALLY_LINKED_WITH_WebCore -DSTATICALLY_LINKED_WITH_JavaScriptCore -DSTATICALLY_LINKED_WITH_WTF -DQT_BUILD_WEBKITWIDGETS_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -D_USE_MATH_DEFINES -DBUILDING_QT__=1 -DENABLE_3D_RENDERING=1 -DENABLE_BLOB=1 -DENABLE_CHANNEL_MESSAGING=1 -DENABLE_CSS_BOX_DECORATION_BREAK=1 -DENABLE_CSS_COMPOSITING=1 -DENABLE_CSS_EXCLUSIONS=1 -DENABLE_CSS_FILTERS=1 -DENABLE_CSS_IMAGE_SET=1 -DENABLE_CSS_REGIONS=1 -DENABLE_CSS_STICKY_POSITION=1 -DENABLE_DATALIST_ELEMENT=1 -DENABLE_DETAILS_ELEMENT=1 -DENABLE_FAST_MOBILE_SCROLLING=1 -DENABLE_FILTERS=1 -DENABLE_FTPDIR=1 -DENABLE_GESTURE_EVENTS=1 -DENABLE_ICONDATABASE=1 -DENABLE_IFRAME_SEAMLESS=1 -DENABLE_INPUT_TYPE_COLOR=1 -DENABLE_INSPECTOR=1 -DENABLE_INSPECTOR_SERVER=1 -DENABLE_JAVASCRIPT_DEBUGGER=1 -DENABLE_LEGACY_NOTIFICATIONS=1 -DENABLE_LEGACY_VIEWPORT_ADAPTION=1 -DENABLE_LEGACY_VENDOR_PREFIXES=1 -DENABLE_METER_ELEMENT=1 -DENABLE_NOTIFICATIONS=1 -DENABLE_PAGE_VISIBILITY_API=1 -DENABLE_PROGRESS_ELEMENT=1 -DENABLE_REQUEST_ANIMATION_FRAME=1 -DENABLE_SHARED_WORKERS=1 -DENABLE_SMOOTH_SCROLLING=1 -DENABLE_SQL_DATABASE=1 -DENABLE_SVG=1 -DENABLE_SVG_FONTS=1 -DENABLE_TOUCH_ADJUSTMENT=1 -DENABLE_TOUCH_EVENTS=1 -DENABLE_WEB_SOCKETS=1 -DENABLE_WEB_TIMING=1 -DENABLE_WORKERS=1 -DWTF_USE_TILED_BACKING_STORE=1 -DHAVE_QTQUICK=1 -DHAVE_QTPRINTSUPPORT=1 -DHAVE_QSTYLE=1 -DHAVE_QTTESTLIB=1 -DENABLE_XSLT=1 -DENABLE_NETSCAPE_PLUGIN_API=1 -DPLUGIN_ARCHITECTURE_UNSUPPORTED=1 -DENABLE_GEOLOCATION=1 -DENABLE_ORIENTATION_EVENTS=1 -DENABLE_DEVICE_ORIENTATION=1 -DENABLE_VIDEO=1 -DWTF_USE_QT_MULTIMEDIA=1 -DENABLE_TOUCH_SLIDER=1 -DENABLE_ACCELERATED_2D_CANVAS=0 -DENABLE_ANIMATION_API=0 -DENABLE_BATTERY_STATUS=0 -DENABLE_CSP_NEXT=0 -DENABLE_CSS_GRID_LAYOUT=0 -DENABLE_CSS_HIERARCHIES=0 -DENABLE_CSS_IMAGE_ORIENTATION=0 -DENABLE_CSS_IMAGE_RESOLUTION=0 -DENABLE_CSS_SHADERS=0 -DENABLE_CSS_VARIABLES=0 -DENABLE_CSS3_CONDITIONAL_RULES=0 -DENABLE_CSS3_TEXT=0 -DENABLE_DASHBOARD_SUPPORT=0 -DENABLE_DATAGRID=0 -DENABLE_DATA_TRANSFER_ITEMS=0 -DENABLE_DIRECTORY_UPLOAD=0 -DENABLE_DOWNLOAD_ATTRIBUTE=0 -DENABLE_FILE_SYSTEM=0 -DENABLE_FULLSCREEN_API=0 -DENABLE_GAMEPAD=0 -DENABLE_HIGH_DPI_CANVAS=0 -DENABLE_INDEXED_DATABASE=0 -DENABLE_INPUT_SPEECH=0 -DENABLE_INPUT_TYPE_DATE=0 -DENABLE_INPUT_TYPE_DATETIME=0 -DENABLE_INPUT_TYPE_DATETIMELOCAL=0 -DENABLE_INPUT_TYPE_MONTH=0 -DENABLE_INPUT_TYPE_TIME=0 -DENABLE_INPUT_TYPE_WEEK=0 -DENABLE_LEGACY_CSS_VENDOR_PREFIXES=0 -DENABLE_LINK_PREFETCH=0 -DENABLE_LINK_PRERENDER=0 -DENABLE_MATHML=0 -DENABLE_MEDIA_SOURCE=0 -DENABLE_MEDIA_STATISTICS=0 -DENABLE_MEDIA_STREAM=0 -DENABLE_MHTML=0 -DENABLE_MICRODATA=0 -DENABLE_MUTATION_OBSERVERS=0 -DENABLE_NAVIGATOR_CONTENT_UTILS=0 -DENABLE_NETWORK_INFO=0 -DENABLE_QUOTA=0 -DENABLE_SCRIPTED_SPEECH=0 -DENABLE_SHADOW_DOM=0 -DENABLE_STYLE_SCOPED=0 -DENABLE_SVG_DOM_OBJC_BINDINGS=0 -DENABLE_TEXT_AUTOSIZING=0 -DENABLE_TEXT_NOTIFICATIONS_ONLY=0 -DENABLE_TOUCH_ICON_LOADING=0 -DENABLE_UNDO_MANAGER=0 -DENABLE_VIBRATION=0 -DENABLE_VIDEO_TRACK=0 -DENABLE_WEBGL=0 -DENABLE_WEB_AUDIO=0 -DBUILDING_QtWebKitWidgetsd -DBUILDING_WEBKIT -DQT_ASCII_CAST_WARNINGS -DQT_MAKEDLL -DQT_DLL -DQT_WIDGETS_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_QUICK_LIB -DQT_MULTIMEDIAWIDGETS_LIB -DQT_PRINTSUPPORT_LIB -DQT_XMLPATTERNS_LIB -DQT_QML_LIB -DQT_MULTIMEDIA_LIB -DQT_WIDGETS_LIB -DQT_LOCATION_LIB -DQT_SQL_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_SENSORS_LIB -DQT_CORE_LIB -DQT_NO_EXCEPTIONS
      windres -i QtWebKitWidgets_resource.rc -o obj\release\QtWebKitWidgets_resource_res.o --include-dir=. -DUNICODE -DSTATICALLY_LINKED_WITH_WebKit1 -DSQLITE_CORE -DSQLITE_OMIT_LOAD_EXTENSION -DSQLITE_OMIT_COMPLETE -DSTATICALLY_LINKED_WITH_WebCore -DSTATICALLY_LINKED_WITH_JavaScriptCore -DSTATICALLY_LINKED_WITH_WTF -DQT_BUILD_WEBKITWIDGETS_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -D_USE_MATH_DEFINES -DBUILDING_QT__=1 -DNDEBUG -DENABLE_3D_RENDERING=1 -DENABLE_BLOB=1 -DENABLE_CHANNEL_MESSAGING=1 -DENABLE_CSS_BOX_DECORATION_BREAK=1 -DENABLE_CSS_COMPOSITING=1 -DENABLE_CSS_EXCLUSIONS=1 -DENABLE_CSS_FILTERS=1 -DENABLE_CSS_IMAGE_SET=1 -DENABLE_CSS_REGIONS=1 -DENABLE_CSS_STICKY_POSITION=1 -DENABLE_DATALIST_ELEMENT=1 -DENABLE_DETAILS_ELEMENT=1 -DENABLE_FAST_MOBILE_SCROLLING=1 -DENABLE_FILTERS=1 -DENABLE_FTPDIR=1 -DENABLE_GESTURE_EVENTS=1 -DENABLE_ICONDATABASE=1 -DENABLE_IFRAME_SEAMLESS=1 -DENABLE_INPUT_TYPE_COLOR=1 -DENABLE_INSPECTOR=1 -DENABLE_INSPECTOR_SERVER=1 -DENABLE_JAVASCRIPT_DEBUGGER=1 -DENABLE_LEGACY_NOTIFICATIONS=1 -DENABLE_LEGACY_VIEWPORT_ADAPTION=1 -DENABLE_LEGACY_VENDOR_PREFIXES=1 -DENABLE_METER_ELEMENT=1 -DENABLE_NOTIFICATIONS=1 -DENABLE_PAGE_VISIBILITY_API=1 -DENABLE_PROGRESS_ELEMENT=1 -DENABLE_REQUEST_ANIMATION_FRAME=1 -DENABLE_SHARED_WORKERS=1 -DENABLE_SMOOTH_SCROLLING=1 -DENABLE_SQL_DATABASE=1 -DENABLE_SVG=1 -DENABLE_SVG_FONTS=1 -DENABLE_TOUCH_ADJUSTMENT=1 -DENABLE_TOUCH_EVENTS=1 -DENABLE_WEB_SOCKETS=1 -DENABLE_WEB_TIMING=1 -DENABLE_WORKERS=1 -DWTF_USE_TILED_BACKING_STORE=1 -DHAVE_QTQUICK=1 -DHAVE_QTPRINTSUPPORT=1 -DHAVE_QSTYLE=1 -DHAVE_QTTESTLIB=1 -DENABLE_XSLT=1 -DENABLE_NETSCAPE_PLUGIN_API=1 -DPLUGIN_ARCHITECTURE_UNSUPPORTED=1 -DENABLE_GEOLOCATION=1 -DENABLE_ORIENTATION_EVENTS=1 -DENABLE_DEVICE_ORIENTATION=1 -DENABLE_VIDEO=1 -DWTF_USE_QT_MULTIMEDIA=1 -DENABLE_TOUCH_SLIDER=1 -DENABLE_ACCELERATED_2D_CANVAS=0 -DENABLE_ANIMATION_API=0 -DENABLE_BATTERY_STATUS=0 -DENABLE_CSP_NEXT=0 -DENABLE_CSS_GRID_LAYOUT=0 -DENABLE_CSS_HIERARCHIES=0 -DENABLE_CSS_IMAGE_ORIENTATION=0 -DENABLE_CSS_IMAGE_RESOLUTION=0 -DENABLE_CSS_SHADERS=0 -DENABLE_CSS_VARIABLES=0 -DENABLE_CSS3_CONDITIONAL_RULES=0 -DENABLE_CSS3_TEXT=0 -DENABLE_DASHBOARD_SUPPORT=0 -DENABLE_DATAGRID=0 -DENABLE_DATA_TRANSFER_ITEMS=0 -DENABLE_DIRECTORY_UPLOAD=0 -DENABLE_DOWNLOAD_ATTRIBUTE=0 -DENABLE_FILE_SYSTEM=0 -DENABLE_FULLSCREEN_API=0 -DENABLE_GAMEPAD=0 -DENABLE_HIGH_DPI_CANVAS=0 -DENABLE_INDEXED_DATABASE=0 -DENABLE_INPUT_SPEECH=0 -DENABLE_INPUT_TYPE_DATE=0 -DENABLE_INPUT_TYPE_DATETIME=0 -DENABLE_INPUT_TYPE_DATETIMELOCAL=0 -DENABLE_INPUT_TYPE_MONTH=0 -DENABLE_INPUT_TYPE_TIME=0 -DENABLE_INPUT_TYPE_WEEK=0 -DENABLE_LEGACY_CSS_VENDOR_PREFIXES=0 -DENABLE_LINK_PREFETCH=0 -DENABLE_LINK_PRERENDER=0 -DENABLE_MATHML=0 -DENABLE_MEDIA_SOURCE=0 -DENABLE_MEDIA_STATISTICS=0 -DENABLE_MEDIA_STREAM=0 -DENABLE_MHTML=0 -DENABLE_MICRODATA=0 -DENABLE_MUTATION_OBSERVERS=0 -DENABLE_NAVIGATOR_CONTENT_UTILS=0 -DENABLE_NETWORK_INFO=0 -DENABLE_QUOTA=0 -DENABLE_SCRIPTED_SPEECH=0 -DENABLE_SHADOW_DOM=0 -DENABLE_STYLE_SCOPED=0 -DENABLE_SVG_DOM_OBJC_BINDINGS=0 -DENABLE_TEXT_AUTOSIZING=0 -DENABLE_TEXT_NOTIFICATIONS_ONLY=0 -DENABLE_TOUCH_ICON_LOADING=0 -DENABLE_UNDO_MANAGER=0 -DENABLE_VIBRATION=0 -DENABLE_VIDEO_TRACK=0 -DENABLE_WEBGL=0 -DENABLE_WEB_AUDIO=0 -DBUILDING_QtWebKitWidgets -DBUILDING_WEBKIT -DQT_ASCII_CAST_WARNINGS -DQT_MAKEDLL -DQT_DLL -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_QUICK_LIB -DQT_MULTIMEDIAWIDGETS_LIB -DQT_PRINTSUPPORT_LIB -DQT_XMLPATTERNS_LIB -DQT_QML_LIB -DQT_MULTIMEDIA_LIB -DQT_WIDGETS_LIB -DQT_LOCATION_LIB -DQT_SQL_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_SENSORS_LIB -DQT_CORE_LIB -DQT_NO_EXCEPTIONS
      g++ -shared -Wl,--out-implib,..\lib\libQtWebKitWidgetsd5.a -o ..\lib\QtWebKitWidgetsd5.dll   -lglu32 -lopengl32 -lgdi32 -luser32 -LC:\SDK\mingw32\i686-w64-mingw32\lib -LC:\SDK\ported32\lib -LC:\SDK\Qt-i686\databases\firebird\lib -LC:\SDK\Qt-i686\databases\mysql\lib -LC:\SDK\Qt-i686\databases\pgsql\lib -LC:/SDK/sources/qt5/qtbase/lib -lQtWidgetsd5 -LC:/SDK/sources/qt5/qtbase/lib -lQtNetworkd5 -LC:/SDK/sources/qt5/qtbase/lib -lQtGuid5 -LC:/SDK/sources/qt5/qtbase/lib -lQtCored5 obj\debug\QtWebKitWidgetsd_resource_res.o -Wl,-whole-archive -lWebKit1d -Wl,-no-whole-archive -LC:/SDK/sources/qt5/qtwebkit/Source/WebKit/debug -Wl,-whole-archive -lWebCored -Wl,-no-whole-archive -LC:/SDK/sources/qt5/qtwebkit/Source/WebCore/debug -ladvapi32 -lgdi32 -lshell32 -lshlwapi -luser32 -lversion -lgdi32 -lole32 -luser32 -Wl,-whole-archive -lJavaScriptCored -Wl,-no-whole-archive -LC:/SDK/sources/qt5/qtwebkit/Source/JavaScriptCore/debug -lwinmm -Wl,-whole-archive -lWTFd -Wl,-no-whole-archive -LC:/SDK/sources/qt5/qtwebkit/Source/WTF/debug -licuin -licuuc -licudt -lwinmm -lgdi32 -LC:/SDK/sources/qt5/qtdeclarative/lib -lQtQuickd5 -LC:/SDK/sources/qt5/qtmultimedia/lib -lQtMultimediaWidgetsd5 -LC:/SDK/sources/qt5/qtbase/lib -lQtPrintSupportd5 -LC:/SDK/sources/qt5/qtxmlpatterns/lib -lQtXmlPatternsd5 -LC:/SDK/sources/qt5/qtdeclarative/lib -lQtQmld5 -LC:/SDK/sources/qt5/qtmultimedia/lib -lQtMultimediad5 -LC:/SDK/sources/qt5/qtbase/lib -lQtWidgetsd5 -LC:/SDK/sources/qt5/qtlocation/lib -lQtLocationd5 -LC:/SDK/sources/qt5/qtbase/lib -lQtSqld5 -LC:/SDK/sources/qt5/qtbase/lib -lQtNetworkd5 -LC:/SDK/sources/qt5/qtbase/lib -lQtGuid5 -LC:/SDK/sources/qt5/qtsensors/lib -lQtSensorsd5 -LC:/SDK/sources/qt5/qtbase/lib -lQtCored5
      g++ -Wl,-s -shared -Wl,--out-implib,..\lib\libQtWebKitWidgets5.a -o ..\lib\QtWebKitWidgets5.dll   -lglu32 -lopengl32 -lgdi32 -luser32 -LC:\SDK\mingw32\i686-w64-mingw32\lib -LC:\SDK\ported32\lib -LC:\SDK\Qt-i686\databases\firebird\lib -LC:\SDK\Qt-i686\databases\mysql\lib -LC:\SDK\Qt-i686\databases\pgsql\lib -LC:/SDK/sources/qt5/qtbase/lib -lQtWidgets5 -LC:/SDK/sources/qt5/qtbase/lib -lQtNetwork5 -LC:/SDK/sources/qt5/qtbase/lib -lQtGui5 -LC:/SDK/sources/qt5/qtbase/lib -lQtCore5 obj\release\QtWebKitWidgets_resource_res.o -Wl,-whole-archive -lWebKit1 -Wl,-no-whole-archive -LC:/SDK/sources/qt5/qtwebkit/Source/WebKit/release -Wl,-whole-archive -lWebCore -Wl,-no-whole-archive -LC:/SDK/sources/qt5/qtwebkit/Source/WebCore/release -ladvapi32 -lgdi32 -lshell32 -lshlwapi -luser32 -lversion -lgdi32 -lole32 -luser32 -Wl,-whole-archive -lJavaScriptCore -Wl,-no-whole-archive -LC:/SDK/sources/qt5/qtwebkit/Source/JavaScriptCore/release -lwinmm -Wl,-whole-archive -lWTF -Wl,-no-whole-archive -LC:/SDK/sources/qt5/qtwebkit/Source/WTF/release -licuin -licuuc -licudt -lwinmm -lgdi32 -LC:/SDK/sources/qt5/qtdeclarative/lib -lQtQuick5 -LC:/SDK/sources/qt5/qtmultimedia/lib -lQtMultimediaWidgets5 -LC:/SDK/sources/qt5/qtbase/lib -lQtPrintSupport5 -LC:/SDK/sources/qt5/qtxmlpatterns/lib -lQtXmlPatterns5 -LC:/SDK/sources/qt5/qtdeclarative/lib -lQtQml5 -LC:/SDK/sources/qt5/qtmultimedia/lib -lQtMultimedia5 -LC:/SDK/sources/qt5/qtbase/lib -lQtWidgets5 -LC:/SDK/sources/qt5/qtlocation/lib -lQtLocation5 -LC:/SDK/sources/qt5/qtbase/lib -lQtSql5 -LC:/SDK/sources/qt5/qtbase/lib -lQtNetwork5 -LC:/SDK/sources/qt5/qtbase/lib -lQtGui5 -LC:/SDK/sources/qt5/qtsensors/lib -lQtSensors5 -LC:/SDK/sources/qt5/qtbase/lib -lQtCore5
      Warning: resolving _cti_vm_throw by linking to @cti_vm_throw@4
      Use --enable-stdcall-fixup to disable these warnings
      Use --disable-stdcall-fixup to disable these fixups
      mingw32-make[4]: Leaving directory 'C:/SDK/sources/qt5/qtwebkit/Source'
      Warning: resolving _cti_vm_throw by linking to @cti_vm_throw@4
      Use --enable-stdcall-fixup to disable these warnings
      Use --disable-stdcall-fixup to disable these fixups
      C:/SDK/sources/qt5/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(SymbolTable.o):SymbolTable.cpp:(.text+0x362): undefined reference to `JSC::JSCell::classInfo() const'
      C:/SDK/sources/qt5/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(StructureChain.o):StructureChain.cpp:(.text+0x36): undefined reference to `JSC::JSCell::classInfo() const'
      C:/SDK/sources/qt5/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(StructureChain.o):StructureChain.cpp:(.text+0x7a): undefined reference to `JSC::JSCell::classInfo() const'
      C:/SDK/sources/qt5/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(StructureChain.o):StructureChain.cpp:(.text+0x5c2): undefined reference to `JSC::JSCell::classInfo() const'
      c:/sdk/mingw32/bin/../lib/gcc/i686-w64-mingw32/4.7.2/../../../../i686-w64-mingw32/bin/ld.exe: C:/SDK/sources/qt5/qtwebkit/Source/JavaScriptCore/debug/libJavaScriptCored.a(StructureChain.o): bad reloc address 0x0 in section `.data'
      collect2.exe: error: ld returned 1 exit status
      Makefile.api.Debug:75: recipe for target '..\lib\QtWebKitWidgetsd5.dll' failed
      mingw32-make[4]: *** [..\lib\QtWebKitWidgetsd5.dll] Error 1
      mingw32-make[4]: Leaving directory 'C:/SDK/sources/qt5/qtwebkit/Source'
      Makefile.api:37: recipe for target 'debug-all' failed
      mingw32-make[3]: *** [debug-all] Error 2
      mingw32-make[3]: Leaving directory 'C:/SDK/sources/qt5/qtwebkit/Source'
      Makefile.QtWebKit:37: recipe for target 'sub-api-pri-make_first-ordered' failed
      mingw32-make[2]: *** [sub-api-pri-make_first-ordered] Error 2
      mingw32-make[2]: Leaving directory 'C:/SDK/sources/qt5/qtwebkit/Source'
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            net147 Jonathan Liu
            alexpux Alexey Pavlov
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes