Fix undefined reference to JSC::JSCell::classInfo with MinGW-w64

JSC::JSCell::classInfo is defined inline in JSDestructibleObject.h but
not all the classes that that inherit directly from JSCell include
JSDestructibleObject.h.

Move JSC::JSCell::classInfo from JSDestructibleObject.h into JSObject.h
to resolve the undefined reference errors when compiling with MinGW-w64.
JSDestructibleObject.h is already removed upstream in SVN r128851 but
the commit has a lot of other changes which don't apply cleanly.

Task-number: QTBUG-27764
Change-Id: I75b13c93dd13a346e672ca76fd7b23a616653a79
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>
Reviewed-by: Alexey Pavlov <alexey.pawlow@gmail.com>